Added field discovery back in